# codex-workspaces

./: CHANGELOG.md  MANIFEST.in  README.MD  README.zh-CN.md  codex-account  codex-accounts  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
docs/: DESIGN.zh-CN.md  RELEASE.zh-CN.md  TESTING.zh-CN.md
macos/: README.MD  README.zh-CN.md  codex-workspaces
src/codex_workspaces/: __init__.py  auth_inspector.py  cli.py  config.py  core.py  errors.py  platforms.py  stats.py  store.py
src/codex_workspaces/private_api/: auth.py  client.py  errors.py  models.py
tests/: test_cli.py  test_core.py
