[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-workspaces"
version = "0.3.3"
description = "Cross-platform Codex workspace switcher with a preserved macOS shell workflow."
readme = "README.MD"
requires-python = ">=3.9"
authors = [
  { name = "blockchain-project-lives" }
]
keywords = ["codex", "workspaces", "cli", "symlink"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5"
]

[project.scripts]
codex-workspaces = "codex_workspaces.cli:main"

[project.urls]
Homepage = "https://github.com/blockchain-project-lives/codex-workspaces"
Repository = "https://github.com/blockchain-project-lives/codex-workspaces"
Changelog = "https://github.com/blockchain-project-lives/codex-workspaces/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
